Refactor and fix high memory usage in media player
This is not as performant as the last implementation.
See https://youtrack.jetbrains.com/issue/SKIKO-997/Memory-issue-when-calling-Image.makeFromPixmappixmap.toComposeImageBitmap